FIX/Fixed align in main

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 3rem;
 }
 
 .deco-container{
@@ -70,8 +70,8 @@ header{
 }
 
 main{
-    margin-top: 2rem;
     display: flex;
+    align-items: center;
     flex-direction: row-reverse;
 }
 
@@ -113,7 +113,7 @@ main{
     font-size: 20pt;
 }
 
-.hero-image{
+.hero-image>img{
     position: relative;
     left: 250px;
 }
